--- a/app/globals.css
+++ b/app/globals.css
@@ -36,7 +36,23 @@ body {
   .li-hover{
     @apply relative cursor-pointer after:content-['']
           after:absolute after:h-[2px] after:w-0
-          after:right-0 after:bottom-0 after:transition-all
+          after:left-0 after:bottom-0 after:transition-all
           after:duration-500 after:bg-blue-500 hover:after:w-full
   }
+}
+
+
+@keyframes marquee {
+  0% {
+    transform: translateX(0%);
+  }
+  100% {
+    transform: translateX(-50%);
+  }
+}
+
+.marquee {
+  display: flex;
+  animation: marquee 40s linear infinite;
+  width: max-content; /* ensures flex items don't shrink */
 }
